[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbtk"
version = "1.1.1.post1"
authors = [
  {name = "Marin Moulinier"},
]
description = "A toolset for reverse engineering and fuzzing Protobuf-based apps"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Security",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "protobuf<7.34",
    "pyside6>=6.10.2",
    "requests",
    "system-pyside6>=0.1.1",
    "websocket-client",
]

[project.urls]
Homepage = "https://github.com/marin-m/pbtk"
Issues = "https://github.com/marin-m/pbtk/issues"
Changelog = "https://github.com/marin-m/pbtk/releases"

[project.gui-scripts]
pbtk = "pbtk.gui:main"

[project.scripts]
pbtk-jar-extract = "pbtk.extractors.jar_extract:main"
pbtk-from-binary = "pbtk.extractors.from_binary:main"
pbtk-web-extract = "pbtk.extractors.web_extract:main"

[tool.setuptools]
include-package-data = true
package-dir = { pbtk = "src" }
packages = [
    "pbtk",
    "pbtk.extractors",
    "pbtk.utils",
    "pbtk.utils.external",
    "pbtk.utils.external.dex2jar",
    "pbtk.utils.external.dex2jar.lib",
    "pbtk.utils.external.jad",
    "pbtk.utils.external.protoc",
    "pbtk.views"
]

[tool.setuptools.package-data]
"pbtk.utils.external.dex2jar" = ["*"]
"pbtk.utils.external.dex2jar.lib" = ["*"]
"pbtk.utils.external.jad" = ["*"]
"pbtk.utils.external.protoc" = ["*"]
"pbtk.views" = ["*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
